--- a/estilo/menu.css
+++ b/estilo/menu.css
@@ -1,6 +1,69 @@
 
+*{
+      padding: 0px;
+      margin: 0px;
+}
+
+main{
+      height: 90vh;
+      display: flex;
+      justify-content: center;
+}
+
+section{
+      width: 50%;
+      min-height: 45vh;
+      justify-content: space-between;
+    
+}
+
+
+.s_loja{
+      border-right: 5px solid black;
+      justify-content: center;
+      display: flex;
+      align-items: center;
+      background-image: url(https://uploads.metropoles.com/wp-content/uploads/2020/10/09144455/Acess%C3%B3rios-celular.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;  
+      box-shadow: inset 0px 0px 20px 10px  rgba(0, 0, 0, 0.301); 
+      transition: 0.8s linear;
+}
+
+.s_loja:hover{
+      width: 80vw;
+      min-height: 45vh;
+      transition: 1s
+}
+
+
+
+
+.s_tecnica{
+      justify-content: center;
+      display: flex;
+      align-items: center;
+
+
+      background-image: url(https://s3.sa-east-1.amazonaws.com/titulares.ar/wp-content/uploads/2022/04/12125009/1649778608_Reparacion-gratuita-de-iPhone-en-Apple-requisitos.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      box-shadow: inset 0px 0px 20px 10px  rgba(0, 0, 0, 0.301); 
+      transition: 0.8s linear;
+      
+      
+}
+.s_tecnica:hover{
+      width: 80vw;
+      min-height: 45vh;
+      transition: 1s
+}
+
 div.menu{
-        background-color:#09107277;
+        text-transform: uppercase;
+        background-color:#5c5d6377;
         box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 15px;
         padding: 15px;
@@ -8,9 +71,16 @@ div.menu{
         backdrop-filter: blur(5px);
         margin: auto;
         margin: 15px;
-        max-width: 300px;
-        max-height: 300px;
-        display: inline-block;}
+        width: 40%;
+        min-width: 120px;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+      
+      }
+
 
 
 .menu h2{
@@ -25,15 +95,69 @@ div.menu{
 .menu:hover{
       
         background-color: #30007e9a;
+        border:  5px solid rgb(255, 255, 255);
+        transition: 0.4s;
+        
       
       }
-.menu img{
-      width:60%;
-        
-      }
+
 .menu:hover{
 
       background-color: #30007e9a;
       }
 
+#img1{
+     width: 500px;
+     max-width: 100vw;
+     border-radius: 0px 0px 10px 10px;
+}
+
+
+
+
+
+.s_celular{
+
+      justify-content: center;
+      display: flex;
+      align-items: center;
+      background-image: url(https://emporiodocelular.com.br/blog/wp-content/uploads/2020/10/manuten%C3%A7%C3%A3o.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;  
+      box-shadow: inset 0px 0px 20px 10px  rgba(0, 0, 0, 0.301); 
+      transition: 0.8s linear;
+
+}
+
+.s_celular:hover{
+      width: 80vw;
+      min-height: 45vh;
+      transition: 1s
+}
+
+
+
+
+.s_computador{
+
+      justify-content: center;
+      display: flex;
+      align-items: center;
+
+
+      background-image: url(https://www.findup.com.br/wp-content/uploads/2020/11/iStock-625135580.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      box-shadow: inset 0px 0px 20px 10px  rgba(0, 0, 0, 0.301); 
+      transition: 0.8s linear;
+      
+      
+}
+.s_computador:hover{
+      width: 80vw;
+      min-height: 45vh;
+      transition: 1s
+}
       
