--- a/estilo/style.css
+++ b/estilo/style.css
@@ -17,7 +17,7 @@ body{
     background-size: cover;
     align-items: center;
     background-size: cover;
-    background-image: url(/imagens/fundosvg.jpg);
+    background: url(/imagens/fundosvg.jpg);
     
 }
 
@@ -78,178 +78,3 @@ background-color: #000000c5;
 
 
 
-
-
-/*  CONFIGURAÇAO DE ICONES E BNT */
-
-
-main{
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-}
-
-section{
-    width: 50%;
-    min-height: 45vh;
-    justify-content: space-between;
-  
-}
-.s_loja img{
-    width: 100%;
-    max-width: 200px;
-}
-.s_tecnica img{
-    width: 100%;
-    max-width: 200px;
-}
-
-.s_celular img{
-    width: 100%;
-    max-width: 200px;
-}
-.s_computador img{
-    width: 100%;
-    max-width: 200px;
-}
-
-.s_loja{
-    border-right: 5px solid black;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    background-image: url(https://edrodrigues.com.br/wp-content/uploads/2020/09/esta-marca-de-tecnologia-visa-a-cultura-descartavel-de-acessorios-para-telefone.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: inset 0px 0px 20px 10px  rgba(0, 0, 0, 0.301); 
-    transition: 0.8s linear;
-    background-position: center;
-}
-
-.s_loja:hover{
-    width: 80vw;
-    transition: 1s
-}
-
-
-
-
-.s_tecnica{
-    justify-content: center;
-    display: flex;
-    align-items: center;
-
-
-    background-image: url(https://www.myrandainformatica.com.br/img/note.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: inset 0px 0px 20px 10px  rgba(0, 0, 0, 0.301); 
-    transition: 0.8s linear;
-    background-position: center;
-    
-    
-}
-.s_tecnica:hover{
-    width: 80vw;
-    transition: 1s
-}
-
-div.menu{
-      text-transform: uppercase;
-      background-color:#5c5d6377;
-      box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-      border-radius: 15px;
-      padding: 15px;
-      box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
-      backdrop-filter: blur(5px);
-      margin: auto;
-      margin: 15px;
-      width: 40%;
-      min-width: 120px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      
-    
-    }
-
-
-
-.menu h2{
-      color: #ffffff;
-      background-color: #0e0e0e70;
-      border-radius: 15px;
-      padding: 5px;
-      font-size: 0.8em;
-    }
-    
-    
-.menu:hover{
-    
-      background-color: #30007e9a;
-      border:  5px solid rgb(255, 255, 255);
-      transition: 0.4s;
-      
-    
-    }
-
-.menu:hover{
-
-    background-color: #30007e9a;
-    }
-
-#img1{
-   width: 500px;
-   max-width: 100vw;
-   border-radius: 0px 0px 10px 10px;
-}
-
-
-
-
-
-.s_celular{
-
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    background-image: url(https://galeriadailha.com.br/wp-content/uploads/2019/04/ref_b_vtek_site_banner_reparo_avan%C3%A7ado_1920x1080px.png);
-    background-repeat: no-repeat;
-    box-shadow: inset 0px 0px 20px 10px  rgba(0, 0, 0, 0.301); 
-    transition: 0.8s linear;
-    background-size: cover;
-    background-position: center;
-
-}
-
-.s_celular:hover{
-    width: 80vw;
-    min-height: 45vh;
-    transition: 1s
-}
-
-
-
-
-.s_computador{
-
-    justify-content: center;
-    display: flex;
-    align-items: center;
-
-
-    background-image: url(https://www.navegamer.com.br/image/catalog/imgnave/assistencia.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: inset 0px 0px 20px 10px  rgba(0, 0, 0, 0.301); 
-    transition: 0.8s linear;
-    background-position: center;
-    
-    
-}
-.s_computador:hover{
-    width: 80vw;
-    min-height: 45vh;
-    transition: 1s
-}
-    
