--- a/estilo/marcascell.css
+++ b/estilo/marcascell.css
@@ -1,11 +1,20 @@
 
+main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  
+}
+
+
 .marcascell{
     background-color: #1f2daa63;
     height: 200px;
     width: 300px;
     border-radius: 10px;
-    margin: auto;
-    display: inline-block;   
+    margin: auto; 
     margin: 15px;
     backdrop-filter: blur(5px);
     color: white;
@@ -25,8 +34,4 @@
     background-color: rgba(20, 6, 143, 0.671);
   }
 
-  main{
-    width: 90%;
-    margin: auto;
-  }
   
