--- a/estilo/style.css
+++ b/estilo/style.css
@@ -11,12 +11,16 @@ body{
     background-attachment: fixed;
     background-repeat: no-repeat;
     align-items: center;
-    background-image: url(/imagens/fundosvg.jpg);
+    background-image: url(/imagens/fundosvg.jpg);  
     background-size: cover;    
 }
 header{
-  background-color: #4e27a8a8;
+  background-image: url(/imagens/fundosvg.jpg);  
+  background-size: cover;
   max-height: 130px;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
 }
 header>h1{
   font-size: 25px;
@@ -44,7 +48,9 @@ nav>a{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-decoration: none;
   padding: 10px;
+  
 }
+
 nav>a:hover{
   background-color: #4e27a8;
   color: yellow;
